# fcitx5-cedilla

./: CMakeLists.txt  Makefile  README.md
po/: CMakeLists.txt  en_US.po  fr_FR.po
src/: CMakeLists.txt  cedilla-addon.conf.in.in  cedilla-im.conf.in  cedilla_engine.cpp  cedilla_engine.hpp  cedilla_preedit.cpp  cedilla_preedit.hpp  cedilla_ruleset.cpp  cedilla_ruleset.hpp  cedilla_state.cpp  cedilla_state.hpp
